--- a/templates/single-line-text.gohtml
+++ b/templates/single-line-text.gohtml
@@ -1,1 +1,1 @@
-<div class="editor single-line-text" data-conn-id="{{.ConnID}}" data-key="{{.Key}}" contenteditable="{{.Editable}}" data-default="{{.Value}}">{{.Value}}</div>
+<span class="editor single-line-text" data-conn-id="{{.ConnID}}" data-key="{{.Key}}" contenteditable="{{.Editable}}" data-default="{{.Value}}">{{.Value}}</span>
