--- a/css/editor.scss
+++ b/css/editor.scss
@@ -5,10 +5,7 @@
   border-radius: 2px;
 }
 .editor.single-line-text[contenteditable="true"] {
-  padding: 6px;
-  height: 22px;
   box-shadow: 0 0 0 2px rgba(0,123,255,.05);
-  border-radius: 5px;
 }
 .editor.single-line-text[contenteditable="true"], .editor.single-line-number[contenteditable="true"] {
   white-space: nowrap;
@@ -20,6 +17,13 @@
     display:inline;
     white-space:nowrap;
   }
+}
+.editor.single-line-text {
+  display: inline-block;
+  width: 100%;
+  height: 22px;
+  padding: 6px;
+  border-radius: 5px;
 }
 
 // checkboxes
