--- a/templates/checkbox.gohtml
+++ b/templates/checkbox.gohtml
@@ -1,1 +1,1 @@
-<div class="editor checkbox" data-conn-id="{{.ConnID}}" data-key="{{.Key}}" data-value="{{.Value}}"></div>
+<div class="editor checkbox" data-conn-id="{{.ConnID}}" data-key="{{.Key}}" data-value="{{.Value}}">{{if .Value}}✔{{end}}</div>
