--- a/css/editor.scss
+++ b/css/editor.scss
@@ -1,8 +1,15 @@
+.editor {
+  box-sizing: border-box;
+  * {
+    box-sizing: border-box;
+  }
+}
+
 // input-text
 .editor.input-text {
   padding: 6px;
   width: 100%;
-  height: 18px;
+  height: 30px;
   border: none;
   border-radius: 5px;
   outline: 2px solid rgba(0,123,255,.05);
@@ -25,6 +32,20 @@
   overflow-x: scroll;
 }
 .editor.content-html:focus {
+  outline: 2px solid rgba(0,123,255,.25);
+}
+
+// textarea
+.editor.textarea {
+  padding: 6px;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 5px;
+  outline: 2px solid rgba(0,123,255,.05);
+  resize: none;
+}
+.editor.textarea:focus {
   outline: 2px solid rgba(0,123,255,.25);
 }
 
