--- a/templates/content-html.gohtml
+++ b/templates/content-html.gohtml
@@ -1,1 +1,1 @@
-<span class="editor content-html" data-conn-id="{{.ConnID}}" data-key="{{.Key}}" contenteditable="{{.Editable}}" data-default="{{.Value}}">{{.Value}}</span>
+<div class="editor content-html" data-conn-id="{{.ConnID}}" data-key="{{.Key}}" contenteditable="{{.Editable}}">{{.Value}}</div>
